# rust_api

./: Cargo.toml  Dockerfile  README.md
deploy/: deploy.yaml
src/: lib.rs  main.rs  telemetry.rs
src/route/: chat.rs  health_check.rs  history_today.rs  miss_short_video.rs  mod.rs  tiktok_beauty.rs
