[package]
name = "rust_api"
version = "0.1.0"
edition = "2021"
authors = ["Hedui <1628652790@qq.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
# web framework
actix-web = "4"
# cors
actix-cors = "0.6.4"

# We need the `json` feature flag to serialize/deserialize JSON payloads
reqwest = { version = "0.11.16", default-features = false, features = ["json", "rustls-tls", "cookies"] }
tokio = { version = "1", features = ["full"] }

serde_json = "1"
serde = { version = "1", features = ["derive"]}