[package]
name = "rust_api"
version = "0.1.0"
edition = "2021"
authors = ["Hedui <1628652790@qq.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/main.rs"
name = "rust_api"

[dependencies]
# web framework
actix-web = "4"
# cors
actix-cors = "0.6.4"

# We need the `json` feature flag to serialize/deserialize JSON payloads
reqwest = { version = "0.11.16", default-features = false, features = ["json", "rustls-tls", "cookies"] }
tokio = { version = "1", features = ["full"] }

# serialize
serde_json = "1"
serde = { version = "1", features = ["derive"]}

# tracing
tracing-actix-web = "0.7.2"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1.3"